# engine

./: CMakeLists.txt  README.md  main.cpp
engine/: camera.cpp  camera.h  engine.cpp  engine.h
graphics/: color.cpp  color.h  mesh.h  object.cpp  object.h  triangle.cpp  triangle.h
io/: keyboard.cpp  keyboard.h  window.cpp  window.h
math/: functions.h  mat4x4.cpp  mat4x4.h  plane.cpp  plane.h  vec4d.cpp  vec4d.h
utility/: logger.cpp  logger.h  timer.cpp  timer.h
